--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title>인물 맞히기 산성비 게임</title>
+     <link rel="manifest" href="/milt/manifest.json">
+    <meta name="theme-color" content="#000000">
+    <link rel="apple-touch-icon" href="https://i.ibb.co/whwPqjHF/maskable-icon-x512.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <style>
         #gameArea {
             width: 800px;
